Updated flags for Java 16.
Removed stuff that is now default, updated defaults and removed removed stuff.