@@ -1,7 +1,7 @@
 #!/bin/bash
 #By Kristjan Krusic aka. krusic22
 #Don't forget to adjust the variables according your own needs!
-#This is an Java 11+ optimised script! Get the most recent AdoptJDK or ZuluJDK for ARM.
+#This is an Java 16+ optimised script! Get the most recent AdoptJDK or ZuluJDK for ARM.
 #This script is speed-optimized and won't reduce ram use!
 #Less time spent on GC, the better the performance, but possibly higher ram usage.
 #Note: 1G = 1024M
@@ -21,7 +21,7 @@ UPDATEPROGRAM="curl"
 ###
 #PaperMC API Settings. More info: https://papermc.io/api/docs/swagger-ui/index.html?configUrl=/api/openapi/swagger-config
 PROJECT="paper"
-VERSION="1.16.5"
+VERSION="1.17.1"
 #Note: latest is not actually a part of the API, so the script gets the latest build ID using the API first.
 BUILD="latest"
 ###
@@ -54,12 +54,11 @@ PARMS="
 -XX:+IgnoreUnrecognizedVMOptions
 -XX:+UnlockExperimentalVMOptions
 -XX:+UnlockDiagnosticVMOptions
--XX:+UseGCOverheadLimit
--XX:+ParallelRefProcEnabled
 -XX:-OmitStackTraceInFastThrow
 -XX:+ShowCodeDetailsInExceptionMessages
--XX:+UseCompressedOops
+-XX:+DisableExplicitGC
 -XX:+PerfDisableSharedMem
+--illegal-access=permit
 "
 #G1 optimizations...
 GONEP="
@@ -83,20 +82,16 @@ SHENP="
 -XX:ShenandoahControlIntervalMax=10
 -XX:ShenandoahControlIntervalMin=1
 -XX:ShenandoahInitFreeThreshold=70
--XX:ShenandoahFreeThreshold=10
--XX:ShenandoahGarbageThreshold=60
+-XX:ShenandoahGarbageThreshold=25
 -XX:ShenandoahGuaranteedGCInterval=300000
 -XX:ShenandoahMinFreeThreshold=10
 -XX:-ShenandoahRegionSampling
 -XX:ShenandoahRegionSamplingRate=40
--XX:ShenandoahParallelSafepointThreads=4
--XX:+ShenandoahOptimizeInstanceFinals
--XX:+ShenandoahOptimizeStaticFinals
 "
 #ZGC options. Most of them only available in JDK13+.
 #Copy them to the ZGCP area.
 #-XX:-ZUncommit
-#-XX:ZUncommitDelay=5
+#-XX:ZUncommitDelay=300
 #-XX:SoftMaxHeapSize=4G
 #-XX:+ZCollectionInterval=5
 #-XX:ZAllocationSpikeTolerance=2.0
@@ -106,27 +101,27 @@ ZGCP="
 #Experimental options... Use at your own risk!
 if [ "$EXP" = true ]; then
 echo "You have enabled Experimental Options! Use at your own risk!"
-PARMS="$PARMS -XX:+ExitOnOutOfMemoryError -XX:+AlwaysPreTouch -XX:+UseAdaptiveGCBoundary -XX:-DontCompileHugeMethods -XX:+TrustFinalNonStaticFields -XX:+UseFastUnorderedTimeStamps "
+PARMS="$PARMS -XX:+ExitOnOutOfMemoryError -XX:+AlwaysPreTouch -XX:-DontCompileHugeMethods -XX:+TrustFinalNonStaticFields -XX:+UseFastUnorderedTimeStamps "
 fi
 #Large Pages config
 if [ "$LP" = true ]; then
-PARMS="$PARMS -XX:+UseTransparentHugePages -XX:+UseLargePagesInMetaspace -XX:+UseLargePagesInMetaspace -XX:LargePageSizeInBytes=2M -XX:+UseLargePages"
+PARMS="$PARMS -XX:+UseTransparentHugePages -XX:LargePageSizeInBytes=2M -XX:+UseLargePages"
 fi
 #G1 Is only useful when you have some ram... The old recommendation was 4GB, but I've seen improvements even on 512MB.
 if [ "$GONE" = true ]; then
-PARMS="$PARMS -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:+UseG1GC $GONEP"
+PARMS="$PARMS -XX:+UseG1GC $GONEP"
 fi
 #Experimental ShenandoahGC
 if [ "$SHEN" = true ]; then
-PARMS="$PARMS -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:+UseShenandoahGC $SHENP"
+PARMS="$PARMS -XX:+UseShenandoahGC $SHENP"
 fi
 #Experimental ZGC
 if [ "$ZGC" = true ]; then
-PARMS="$PARMS -XX:+DisableExplicitGC -XX:-UseParallelGC -XX:-UseParallelOldGC -XX:-UseG1GC -XX:+UseZGC $ZGCP"
+PARMS="$PARMS -XX:+UseZGC $ZGCP"
 fi
 #Experimental X86 abomination, some of the flags may not be ARCH specific, so they could work on other platforms as well.
 if [ "$X86" = true ]; then
-PARMS="$PARMS -XX:+UseCMoveUnconditionally -XX:+UseFPUForSpilling -XX:+UseNewLongLShift -XX:+UseVectorCmov -XX:+UseXMMForArrayCopy -XX:+UseXmmI2D -XX:+UseXmmI2F -XX:+UseXmmLoadAndClearUpper -XX:+UseXmmRegToRegMoveAll"
+PARMS="$PARMS -XX:+UseCMoveUnconditionally -XX:+UseNewLongLShift -XX:+UseVectorCmov -XX:+UseXmmI2D -XX:+UseXmmI2F"
 fi
 ###
 #Updater. This time actually formatted for readability.
